// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MockingTest > should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1h1oj6e-ListWrapper ep7bpre5"
      />
      <div
        class="css-11qwdcn-FormWrapper ep7bpre6"
      >
        <div
          class="css-va76tc-Title ep7bpre2"
        >
          Name
        </div>
        <input
          placeholder="name"
        />
        <div
          class="css-va76tc-Title ep7bpre2"
        >
          Age
        </div>
        <input
          placeholder="age"
          type="number"
        />
        <button
          class="css-1acsazi-SubmitButton ep7bpre3"
        >
          POST
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1h1oj6e-ListWrapper ep7bpre5"
    />
    <div
      class="css-11qwdcn-FormWrapper ep7bpre6"
    >
      <div
        class="css-va76tc-Title ep7bpre2"
      >
        Name
      </div>
      <input
        placeholder="name"
      />
      <div
        class="css-va76tc-Title ep7bpre2"
      >
        Age
      </div>
      <input
        placeholder="age"
        type="number"
      />
      <button
        class="css-1acsazi-SubmitButton ep7bpre3"
      >
        POST
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MockingTest in client > should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-10"
      />
      <div
        class="flex flex-col gap-20"
      >
        <div
          class="font-r-16 text-black"
        >
          Name
        </div>
        <input
          placeholder="name"
        />
        <div
          class="font-r-16 text-black"
        >
          Age
        </div>
        <input
          placeholder="age"
          type="number"
        />
        <button
          class="bg-cyan-700 text-white p-5 rounded-5"
        >
          POST
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-10"
    />
    <div
      class="flex flex-col gap-20"
    >
      <div
        class="font-r-16 text-black"
      >
        Name
      </div>
      <input
        placeholder="name"
      />
      <div
        class="font-r-16 text-black"
      >
        Age
      </div>
      <input
        placeholder="age"
        type="number"
      />
      <button
        class="bg-cyan-700 text-white p-5 rounded-5"
      >
        POST
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
